2009-03-10  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* data/cortado-template.html:
	* flumotion/component/plugs/cortado/cortado.py:
	* flumotion/component/plugs/cortado/cortado.xml:
	* flumotion/component/plugs/cortado/wizard_gtk.py:
	Framerate is no longer used on cortado, setting it to optional for
	compatibility reasons but not using it anymore.
	* flumotion/component/producers/webcam/wizard_gtk.py:
	Convert the framerate to a float instead of using a string.
	Fixes #970

2009-03-10  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: murrayc

	* data/glade/welcome-wizard.glade:
	Add a notice for the user about the safety of using the default
	options set on the wizard.
	Fixes #1100

2009-03-05  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/test/test_wizard_save.py:
	Fix the tests for the last commit's changes.

2009-03-05  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/producers/firewire/wizard.glade:
	* flumotion/component/producers/firewire/wizard_gtk.py:
	Change the default options of the the firewire wizard page to get
	better results when the source's width has to be corrected.
	Fixes #1135

2009-03-05  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/encoders/smoke/wizard.glade:
	* flumotion/component/encoders/smoke/wizard_gtk.py:
	Present the keyframe spacing in seconds on the wizard. Transform it to
	number of frames taking into account the producer's framerate.
	Fixes #829

2009-03-05  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py (_disconnectActionProxy):
	Fix the UIManager's disconnect from proxy callbac. It was expecting
	the callback ids as a pair (name, id) but we only had the ids.

2009-02-25  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: jlegoff

	* flumotion/admin/assistant/save.py:
	Don't set the name of the producers if it is already set before.